# Financial-data

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  package-lock.json  package.json  start.sh  tsconfig.json  wrangler.jsonc
.claude/: settings.local.json
.github/workflows/: deploy.yml
MD/: CLAUDE.md  DEPLOY.md
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_auth_tenancy.sql  0003_payment_links_tripid.sql  0004_passwords.sql
backend/src/: auth.rs  db.rs  email.rs  fx.rs  handlers.rs  main.rs  models.rs  ryft.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: anim.ts  api.ts  format.ts  main.ts  style.css
scripts/: setup-gcp.sh
worker/: index.ts
